--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "goodlib.iife.d.ts",
     "*"
   ],
+  "@std/esm": {
+    "cjs": true,
+    "esm": "js"
+  },
   "scripts": {
     "install_tools": "npm install && typings install",
     "clean": "rimraf ./dist",
@@ -23,7 +27,7 @@
     "build": "npm run clean && tsc -p tsconfig.app.json && gulp build-es5 && tsc -p tsconfig.es6.json && gulp build-es6 && gulp copyDTS",
     "test": "npm run clean && tsc -p tsconfig.test.json && npm run run_test",
     "testcoverage": "npm run clean && tsc -p tsconfig-test.json && npm run coveralls",
-    "run_test": "mocha ./dist/test/*Test.js",
+    "run_test": "mocha -r @std/esm ./dist/test/*Test.js",
     "coveralls": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec ./dist/test/*.js && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "cover": "npm run test && istanbul cover ./node_modules/mocha/bin/_mocha -- ./dist/test/*.js",
     "bundle_d_ts": "node dts-bundle.js",
@@ -31,6 +35,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@std/esm": "^0.24.0",
     "@types/chai": "^4.0.4",
     "@types/jquery": "^3.2.12",
     "@types/jsdom": "^11.0.1",
