--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "<description>",
   "main": "goodlib.bundle.js",
   "module": "index.js",
-  "typings": "goodlib.d.ts",
+  "typings": "library.d.ts",
   "unpkg": "goodlib.bundle.js",
   "files": [
     "*"
@@ -16,8 +16,8 @@
   "scripts": {
     "install_tools": "npm install && typings install",
     "clean": "rimraf ./dist",
-    "dev": "npm run clean && tsc -p tsconfig.app.json && webpack --env.MODE=development && gulp modifyBundle && gulp copyDTS",
-    "build": "npm run clean && tsc -p tsconfig.app.json && webpack --env.MODE=production && gulp modifyBundle && gulp copyDTS",
+    "dev": "npm run clean && tsc -p tsconfig.app.json && webpack --env.MODE=development && gulp modifyBundle && gulp copyDTS && gulp copyWebpackExternalsFn",
+    "build": "npm run clean && tsc -p tsconfig.app.json && webpack --env.MODE=production && gulp modifyBundle && gulp copyDTS && gulp copyWebpackExternalsFn",
     "test": "npm run clean && tsc -p tsconfig.test.json && npm run run_test",
     "testcoverage": "npm run clean && tsc -p tsconfig-test.json && npm run coveralls",
     "run_test": "mocha -r @std/esm ./dist/test/*Test.js",
@@ -38,6 +38,7 @@
     "chalk": "^2.1.0",
     "coveralls": "^2.13.1",
     "fork-ts-checker-webpack-plugin": "^0.4.1",
+    "goodcore": "^0.17.13",
     "gulp": "^3.9.1",
     "gulp-debug": "^3.1.0",
     "gulp-sequence": "^0.4.6",
